# tree-sitter-structurizr

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: makefile.yml
bindings/c/: tree-sitter-structurizr.h  tree-sitter-structurizr.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_structurizr/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterStructurizrTests/: TreeSitterStructurizrTests.swift
queries/: folds.scm  highlights.scm  indents.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: test.txt
