[package]
name = "tree-sitter-structurizr"
description = "Parser for the Structurizr DSL used to support C4 architecture models."
version = "0.1.0"
authors = ["Jostein Kjønigsen <jostein@kjonigsen.net>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "structurizr"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/josteink/tree-sitter-structurizr"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
